Prettify Add header with logo and name

--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 
 <html lang="en-US">
-    <head>
-        <meta name="charset" content="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>FreaMap</title>
-    </head>
+<head>
+    <meta name="charset" content="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <body>
-        
-    </body>
+    <title>FreaMap</title>
+
+    <link rel="stylesheet" href="styles/header.css" />
+</head>
+
+<body>
+    <header id="header">
+        <div class="header-col --left">
+            <div class="site-identification">
+                <img class="logo" src="images/logo.svg" width="96" height="96" alt="FreaMap Logo" />
+                <div class="name">FreaMap</div>
+            </div>
+        </div>
+        <div class="header-col --right"></div>
+    </header>
+
+    <main id="content"></main>
+    <footer id="footer"></footer>
+</body>
+
 </html>
