--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <title>FreaMap</title>
 
+    <link rel="stylesheet" href="styles/common.css" />
     <link rel="stylesheet" href="styles/header.css" />
 </head>
 
